hphp/hack/test/typecheck/is_expression/invalid_hint_noreturn.php.exp
File "invalid_hint_noreturn.php", line 4, characters 16-23:
The noreturn typehint can only be used to describe a function return type (Naming[2063])
